kubernetes/cart-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
